syntax = "proto3";

import "table_id.proto";

service RowsCountGetter {
    rpc get (TableId) returns (RowsCount) {}
}

message RowsCount {
    uint64 count = 1;
}